cambio de tipo + detales

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<section id="home">
 			<div class="line"></div>
 			<h1>f.<span class="bold">vacotti</span></h1>
-			<p>//cv + portfolio</p>
+			<p>// cv + portfolio</p>
 		</section>
 		<!-- SOBRE MÍ -->
 		<section id="about">
@@ -54,7 +54,7 @@
 				<br><br>
 				Me encuentro cursando el cuarto año de la licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la Universidad Nacional de Lanús (UNLa) y a la vez realizo diferentes cursos para continuar aprendiendo y especializándome en diversos rubros como por ejemplo el de programación web.
 				<br><br>
-				Dentro de la esfera del diseño me apasionan por sobre todo el mundo del branding, la tipografía y el diseño editorial
+				Dentro de la esfera del diseño gráfico me apasionan por sobre todo el mundo del branding, la tipografía y el diseño editorial.
 				</p>
 			</article>
 		</section>
@@ -93,14 +93,14 @@
 						<li>
 							<div class="time-content">
 								<h4 class="date">dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER), del Programa de Lenguas Extranjeras para becarios Progresar del Ministerio de Educación de la Nación.
+								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER) brindado por el Programa de Lenguas Extranjeras para becarios Progresar del Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
 								</p>
 							</div>
 						</li>
 						<li>
 							<div class="time-content">
 								<h4 class="date">dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">programación web inicial</span> / <span class="bold">front-end developer</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).
+								<p>Curso bimestral de <span class="bold">Programación Web</span> / <span class="bold">Front End Developer</span>, <span class="bold">Gestión de Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso "BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).
 								</p>
 							</div>
 						</li>
@@ -131,14 +131,14 @@
 						<li>
 							<div>
 								<h4>dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER), del Programa de Lenguas Extranjeras para becarios Progresar del Ministerio de Educación de la Nación.
+								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER) brindado por el Programa de Lenguas Extranjeras para becarios Progresar del Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
 								</p>
 							</div>
 						</li>
 						<li>
 							<div>
 								<h4>dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">programación web inicial</span> / <span class="bold">front-end developer</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).
+								<p>Curso bimestral de <span class="bold">Programación Web</span> / <span class="bold">Front End Developer</span>, <span class="bold">Gestión de Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso "BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).
 								</p>
 							</div>
 						</li>
@@ -209,7 +209,7 @@
 	<footer>
 		<ul class="footer-data">
 			<li class="footer_title">
-				facundo vacotti
+				Facundo Vacotti
 			</li>
 			<li>diseñador gráfico</li>
 			<li>front-end developer</li>
