--- a/pages/branding.html
+++ b/pages/branding.html
@@ -43,9 +43,9 @@
 		<!-- GALERÍA -->
 		<section id="gallery">
 			<article class="gallery-section">
-				<h3>rediseño de escudo + equipación.
+				<h3>rediseño de escudo + equipación
 					<br><br>
-					<span class="bold">// banfield.</span>
+					<span class="bold">// Club Atlético Banfield</span>
 				</h3>
 				<div class="gallery-container">
 					<div class="gallery-item" data-index="1"><img src="../img/galeria/branding/img-01.png" alt=""></div>
@@ -60,9 +60,9 @@
 			<div class="line"></div>
 			<!-- GALERÍA -->
 			<article class="gallery-section">
-				<h3>rediseño de escudo + equipación.
+				<h3>rediseño de escudo + equipación
 					<br><br>
-					<span class="bold">// rc deportivo</span>
+					<span class="bold">// RC Deportivo de La Coruña</span>
 				</h3>
 				<div class="gallery-container">
 					<div class="gallery-item" data-index="7"><img src="../img/galeria/branding/img-07.png" alt=""></div>
@@ -80,9 +80,9 @@
 			<div class="line"></div>
 			<!-- GALERÍA -->
 			<article class="gallery-section">
-				<h3>desarrollo de identidad visual.
+				<h3>desarrollo de identidad visual
 					<br><br>
-					<span class="bold">// jj.oo. roma 2032</span>
+					<span class="bold">// JJ.OO. Roma 2032</span>
 				</h3>
 				<div class="gallery-container">
 					<div class="gallery-item" data-index="13"><img src="../img/galeria/branding/img-13.png" alt="">
@@ -115,7 +115,7 @@
 	<footer>
 		<ul class="footer-data">
 			<li class="footer_title">
-				facundo vacotti
+				Facundo Vacotti
 			</li>
 			<li>diseñador gráfico</li>
 			<li>front-end developer</li>
