--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -44,9 +44,9 @@
 		<section id="gallery">
 			<!-- GALERÍA -->
 			<article class="gallery-section">
-				<h3>proyecto editorial.
+				<h3>maquetación + tapa de libro
 					<br><br>
-					<span class="bold">// "hiroshige".</span>
+					<span class="bold">// Hiroshige</span>
 				</h3>
 				<div class="gallery-container">
 					<div class="gallery-item" data-index="1"><img src="../img/galeria/editorial/img-10.jpg" alt="">
@@ -73,9 +73,9 @@
 			<div class="line"></div>
 			<!-- GALERÍA -->
 			<article class="gallery-section">
-				<h3>folleto + packaging.
+				<h3>folleto + packaging
 					<br><br>
-					<span class="bold">// huerta urbana.</span>
+					<span class="bold">// Huerta urbana</span>
 				</h3>
 				<div class="gallery-container">
 					<div class="gallery-item" data-index="10"><img src="../img/galeria/editorial/img-01.jpg" alt="">
@@ -90,9 +90,9 @@
 			<div class="line"></div>
 			<!-- GALERÍA -->
 			<article class="gallery-section">
-				<h3>proyecto editorial.
+				<h3>maquetación + tapa de libro
 					<br><br>
-					<span class="bold">// "un mundo feliz", aldous huxley</span>
+					<span class="bold">// Un mundo feliz, de Aldous Huxley</span>
 				</h3>
 				<div class="gallery-container">
 					<div class="gallery-item" data-index="13"><img src="../img/galeria/editorial/img-04.jpg" alt="">
@@ -119,7 +119,7 @@
 	<footer>
 		<ul class="footer-data">
 			<li class="footer_title">
-				facundo vacotti
+				Facundo Vacotti
 			</li>
 			<li>diseñador gráfico</li>
 			<li>front-end developer</li>
