--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -45,7 +45,7 @@
 			<article class="gallery-section">
 				<h3>lettering + editorial + intervención.
 					<br><br>
-					<span class="bold">// real.</span>
+					<span class="bold">// Real</span>
 				</h3>
 				<div class="gallery-container">
 					<div class="gallery-item" data-index="1"><img src="../img/galeria/lettering/img-01.jpg" alt="">
@@ -72,7 +72,7 @@
 	<footer>
 		<ul class="footer-data">
 			<li class="footer_title">
-				facundo vacotti
+				Facundo Vacotti
 			</li>
 			<li>diseñador gráfico</li>
 			<li>front-end developer</li>
