--- a/pages/branding.html
+++ b/pages/branding.html
@@ -16,6 +16,7 @@
 		<nav>
 			<ul class="nav-menu">
 				<li><a href="../index.html">home</a></li>
+				<li><a href="../pages/branding.html" class="selected">branding</a></li>
 				<li><a href="../pages/editorial.html">editorial</a></li>
 				<li><a href="../pages/lettering.html">lettering</a></li>
 			</ul>
@@ -23,6 +24,9 @@
 				<span class="bar"></span>
 				<span class="bar"></span>
 				<span class="bar"></span>
+			</div>
+			<div>
+				<a href="/index.html">home</a>
 			</div>
 		</nav>
 	</header>
