--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -17,12 +17,16 @@
 			<ul class="nav-menu">
 				<li><a href="../index.html">home</a></li>
 				<li><a href="../pages/branding.html">branding</a></li>
+				<li><a href="../pages/editorial.html" class="selected">editorial</a></li>
 				<li><a href="../pages/lettering.html">lettering</a></li>
 			</ul>
 			<div class="hamburger">
 				<span class="bar"></span>
 				<span class="bar"></span>
 				<span class="bar"></span>
+			</div>
+			<div>
+				<a href="/index.html">home</a>
 			</div>
 		</nav>
 	</header>
