--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -16,13 +16,17 @@
 		<nav>
 			<ul class="nav-menu">
 				<li><a href="../index.html">home</a></li>
-				<li><a href="../pages/branding.html">editorial</a></li>
-				<li><a href="../pages/editorial.html">lettering</a></li>
+				<li><a href="../pages/branding.html">branding</a></li>
+				<li><a href="../pages/editorial.html">editorial</a></li>
+				<li><a href="../pages/lettering.html" class="selected">lettering</a></li>
 			</ul>
 			<div class="hamburger">
 				<span class="bar"></span>
 				<span class="bar"></span>
 				<span class="bar"></span>
+			</div>
+			<div>
+				<a href="/index.html">home</a>
 			</div>
 		</nav>
 	</header>
