--- a/pages/branding.html
+++ b/pages/branding.html
@@ -25,8 +25,8 @@
 				<span class="bar"></span>
 				<span class="bar"></span>
 			</div>
-			<div>
-				<a href="/index.html">home</a>
+			<div class="back-home">
+				<a href="../index.html">home</a>
 			</div>
 		</nav>
 	</header>
