--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 			<h1>f.<span class="bold">vacotti</span></h1>
 			<p>// cv + portfolio</p>
 		</section>
+
+		<button class="btn-down">
+			<a href="#about"><i class="fa-solid fa-chevron-down"></i></a>
+		</button>
+
 		<!-- SOBRE MÍ -->
 		<section id="about">
 			<article class="about-data">
