--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -43,30 +43,41 @@
 		</section>
 		<!-- GALERÍA -->
 		<section id="gallery">
-			<!-- GALERÍA -->
 			<article class="gallery-section">
 				<h3>maquetación + tapa de libro
 					<br><br>
 					<span class="bold">// Hiroshige</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/editorial/img-10.jpg" alt="">
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/editorial/img-01.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="2"><img src="../img/galeria/editorial/img-11.jpg" alt="">
+					<div class="gallery-item" data-index="2"><img src="../img/galeria/editorial/img-02.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="3"><img src="../img/galeria/editorial/img-12.jpg" alt="">
+					<div class="gallery-item" data-index="3"><img src="../img/galeria/editorial/img-03.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="4"><img src="../img/galeria/editorial/img-13.jpg" alt="">
+					<div class="gallery-item" data-index="4"><img src="../img/galeria/editorial/img-04.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="5"><img src="../img/galeria/editorial/img-14.jpg" alt="">
+					<div class="gallery-item" data-index="5"><img src="../img/galeria/editorial/img-05.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="6"><img src="../img/galeria/editorial/img-15.jpg" alt="">
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/editorial/img-06.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="7"><img src="../img/galeria/editorial/img-16.jpg" alt="">
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/editorial/img-07.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="8"><img src="../img/galeria/editorial/img-17.jpg" alt="">
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/editorial/img-08.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="9"><img src="../img/galeria/editorial/img-18.jpg" alt="">
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/editorial/img-09.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="10"><img src="../img/galeria/editorial/img-10.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="11"><img src="../img/galeria/editorial/img-11.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="12"><img src="../img/galeria/editorial/img-12.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="13"><img src="../img/galeria/editorial/img-13.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="14"><img src="../img/galeria/editorial/img-14.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="15"><img src="../img/galeria/editorial/img-15.jpg" alt="">
 					</div>
 				</div>
 			</article>
@@ -79,11 +90,11 @@
 					<span class="bold">// Huerta urbana</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="10"><img src="../img/galeria/editorial/img-01.jpg" alt="">
+					<div class="gallery-item" data-index="16"><img src="../img/galeria/editorial/img-16.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="11"><img src="../img/galeria/editorial/img-02.jpg" alt="">
+					<div class="gallery-item" data-index="17"><img src="../img/galeria/editorial/img-17.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="12"><img src="../img/galeria/editorial/img-03.jpg" alt="">
+					<div class="gallery-item" data-index="18"><img src="../img/galeria/editorial/img-18.jpg" alt="">
 					</div>
 				</div>
 			</article>
@@ -96,17 +107,29 @@
 					<span class="bold">// Un mundo feliz, de Aldous Huxley</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="13"><img src="../img/galeria/editorial/img-04.jpg" alt="">
+					<div class="gallery-item" data-index="19"><img src="../img/galeria/editorial/img-19.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="14"><img src="../img/galeria/editorial/img-05.jpg" alt="">
+					<div class="gallery-item" data-index="20"><img src="../img/galeria/editorial/img-20.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="15"><img src="../img/galeria/editorial/img-06.jpg" alt="">
+					<div class="gallery-item" data-index="21"><img src="../img/galeria/editorial/img-21.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="16"><img src="../img/galeria/editorial/img-07.jpg" alt="">
+					<div class="gallery-item" data-index="22"><img src="../img/galeria/editorial/img-22.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="17"><img src="../img/galeria/editorial/img-08.jpg" alt="">
+					<div class="gallery-item" data-index="23"><img src="../img/galeria/editorial/img-23.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="18"><img src="../img/galeria/editorial/img-09.jpg" alt="">
+					<div class="gallery-item" data-index="24"><img src="../img/galeria/editorial/img-24.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="25"><img src="../img/galeria/editorial/img-25.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="26"><img src="../img/galeria/editorial/img-26.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="27"><img src="../img/galeria/editorial/img-27.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="28"><img src="../img/galeria/editorial/img-28.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="29"><img src="../img/galeria/editorial/img-29.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="30"><img src="../img/galeria/editorial/img-30.jpg" alt="">
 					</div>
 				</div>
 			</article>
