--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -37,7 +37,7 @@
 				lugar de simplemente escribirlas.
 				<br><br>
 				Las letras se consideran una forma de arte donde cada letra de una frase o cita actúa como una
-				ilustración. Cada letra se crea con atención a los detalles y tiene un papel único dentro de una
+				ilustración. Cada letra se crea con una gran atención a los detalles y tiene un papel único dentro de una
 				composición.
 			</p>
 		</section>
@@ -60,6 +60,18 @@
 					<div class="gallery-item" data-index="5"><img src="../img/galeria/lettering/img-05.jpg" alt="">
 					</div>
 					<div class="gallery-item" data-index="6"><img src="../img/galeria/lettering/img-06.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/lettering/img-07.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/lettering/img-08.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/lettering/img-09.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/lettering/img-10.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/lettering/img-11.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/lettering/img-12.jpg" alt="">
 					</div>
 				</div>
 			</article>
