--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,14 @@
 	<link rel="shortcut icon" href="./img/icon.svg" type="image/x-icon">
 	<link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
 	<!-- HEADER -->
 	<header>
 		<nav>
 			<ul class="nav-menu">
 				<li>
-					<a href="#home" class="selected nav-link" >home</a>
+					<a href="#home" class="selected nav-link">home</a>
 				</li>
 				<li>
 					<a href="#about" class="nav-link">sobre mí</a>
@@ -45,19 +47,25 @@
 			<p>// cv + portfolio</p>
 			<button class="btn-down">
 				<a href="#about"><i class="fa-solid fa-chevron-down"></i></a>
-			</button>	
+			</button>
 		</section>
 		<!-- SOBRE MÍ -->
 		<section id="about">
 			<article class="about-data">
 				<h2>sobre mí.</h2>
 				<p><span class="bold">¡Hola!</span>. Te doy la bienvenida a mi cv/portfolio.
-				<br><br>
-				Mi nombre es <span class="bold">Facundo Vacotti</span>. Tengo 23 años, resido en Lomas de Zamora (Buenos Aires, Argentina) y actualmente estoy en proceso de convertirme en <span class="bold">diseñador gráfico</span>.
-				<br><br>
-				Me encuentro cursando el cuarto año de la licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la Universidad Nacional de Lanús (UNLa) y a la vez realizo diferentes cursos para continuar aprendiendo y especializándome en diversos rubros como por ejemplo el de programación web.
-				<br><br>
-				Dentro de la esfera del diseño gráfico me apasionan por sobre todo el mundo del branding, la tipografía y el diseño editorial.
+					<br><br>
+					Mi nombre es <span class="bold">Facundo Vacotti</span>. Tengo 23 años, resido en Lomas de Zamora
+					(Buenos Aires, Argentina) y actualmente estoy en proceso de convertirme en <span
+						class="bold">diseñador gráfico</span>.
+					<br><br>
+					Me encuentro cursando el cuarto año de la licenciatura en <span class="bold">Diseño y Comunicación
+						Visual</span> en la Universidad Nacional de Lanús (UNLa) y a la vez realizo diferentes cursos
+					para continuar aprendiendo y especializándome en diversos rubros como por ejemplo el de programación
+					web.
+					<br><br>
+					Dentro de la esfera del diseño gráfico me apasionan por sobre todo el mundo del branding, la
+					tipografía y el diseño editorial.
 				</p>
 			</article>
 		</section>
@@ -75,35 +83,44 @@
 						<li>
 							<div class="time-content">
 								<h4 class="date">2012-2017</h4>
-								<p>Bachiller en <span class="bold">ciencias sociales</span> en el Insituto San Francisco Javier.
+								<p>Bachiller en <span class="bold">ciencias sociales</span> en el Insituto San Francisco
+									Javier.
 								</p>
 							</div>
 						</li>
 						<li>
 							<div class="time-content">
 								<h4 class="date">2018-2019</h4>
-								<p>Licenciatura en <span class="bold">Diseño Industrial</span> en la Universidad Nacional de Lanús (UNLa).
+								<p>Licenciatura en <span class="bold">Diseño Industrial</span> en la Universidad
+									Nacional de Lanús (UNLa).
 								</p>
 							</div>
 						</li>
 						<li>
 							<div class="time-content">
 								<h4 class="date">2019-(en curso)</h4>
-								<p>Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la Universidad Nacional de Lanús (UNLa).
+								<p>Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la
+									Universidad Nacional de Lanús (UNLa).
 								</p>
 							</div>
 						</li>
 						<li>
 							<div class="time-content">
 								<h4 class="date">dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER) brindado por el Programa de Lenguas Extranjeras para becarios Progresar del Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
+								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER)
+									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
+									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
 								</p>
 							</div>
 						</li>
 						<li>
 							<div class="time-content">
 								<h4 class="date">dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">Programación Web</span> / <span class="bold">Front End Developer</span>, <span class="bold">Gestión de Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso "BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).
+								<p>Curso bimestral de <span class="bold">Programación Web</span> / <span
+										class="bold">Front End Developer</span>, <span class="bold">Gestión de
+										Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
+									"BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad
+									Teconológica Nacional (UTN).
 								</p>
 							</div>
 						</li>
@@ -115,33 +132,42 @@
 						<li>
 							<div>
 								<h4>2012-2017</h4>
-								<p>Bachiller en <span class="bold">ciencias sociales</span> en el Instituto San Francisco Javier.</p>
+								<p>Bachiller en <span class="bold">ciencias sociales</span> en el Instituto San
+									Francisco Javier.</p>
 							</div>
 						</li>
 						<li>
 							<div>
 								<h4>2018-2019</h4>
-								<p>Licenciatura en <span class="bold">Diseño Industrial</span> en la Universidad Nacional de Lanús (UNLa).</p>
+								<p>Licenciatura en <span class="bold">Diseño Industrial</span> en la Universidad
+									Nacional de Lanús (UNLa).</p>
 							</div>
 						</li>
 						<li>
 							<div>
 								<h4>2019-(en curso)</h4>
-								<p>Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la Universidad Nacional de Lanús (UNLa).
+								<p>Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la
+									Universidad Nacional de Lanús (UNLa).
 								</p>
 							</div>
 						</li>
 						<li>
 							<div>
 								<h4>dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER) brindado por el Programa de Lenguas Extranjeras para becarios Progresar del Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
+								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER)
+									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
+									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
 								</p>
 							</div>
 						</li>
 						<li>
 							<div>
 								<h4>dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">Programación Web</span> / <span class="bold">Front End Developer</span>, <span class="bold">Gestión de Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso "BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).
+								<p>Curso bimestral de <span class="bold">Programación Web</span> / <span
+										class="bold">Front End Developer</span>, <span class="bold">Gestión de
+										Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
+									"BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad
+									Teconológica Nacional (UTN).
 								</p>
 							</div>
 						</li>
@@ -171,7 +197,8 @@
 			<h2>contáctame.</h2>
 			<div class="form-container">
 				<div class="form">
-					<form method="post" action="mailto:fvacotti@outlook.com? subject=¡Trabajemos juntos!" target="_blank" enctype="text/plain">
+					<form method="post" action="mailto:fvacotti@outlook.com? subject=¡Trabajemos juntos!"
+						target="_blank" enctype="text/plain">
 
 						<label for="nombre">nombre.</label>
 						<input type="text" name="Nombre" id="nombre" placeholder="ej.: Juan" required>
@@ -186,7 +213,8 @@
 						<input type="tel" name="Teléfono" id="tel" placeholder="1101010101">
 
 						<label for="describe">trabajo a realizar.</label>
-						<textarea name="Describe" id="describe" cols="30" rows="10" placeholder="Describí el trabajo que deseas realizar" required></textarea>
+						<textarea name="Describe" id="describe" cols="30" rows="10"
+							placeholder="Describí el trabajo que deseas realizar" required></textarea>
 
 						<input class="send" type="submit" value="enviar">
 					</form>
@@ -197,8 +225,10 @@
 					<ul>
 						<li><a href="tel:5411441000093" target="_blank" class="fa-brands fa-whatsapp"></a></li>
 						<li><a href="https://t.me/fvacotti" target="_blank" class="fa-brands fa-telegram"></a></li>
-						<li><a href="https://www.linkedin.com/in/facundo-vacotti-876a5919b" target="_blank" class="fa-brands fa-linkedin-in"></a></li>
-						<li><a href="mailto:fvacotti@outlook.com" target="_blank" class="fa-sharp fa-solid fa-envelope"></a></li>
+						<li><a href="https://www.linkedin.com/in/facundo-vacotti-876a5919b" target="_blank"
+								class="fa-brands fa-linkedin-in"></a></li>
+						<li><a href="mailto:fvacotti@outlook.com" target="_blank"
+								class="fa-sharp fa-solid fa-envelope"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -235,4 +265,5 @@
 	<script src="js/main.js"></script>
 	<script src="https://kit.fontawesome.com/5727d2ffb3.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
