--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 			<div class="line"></div>
 			<h1>f.<span class="bold">vacotti</span></h1>
 			<p>// cv + portfolio</p>
-			<button class="btn-down">
-				<a href="#about"><i class="fa-solid fa-chevron-down"></i></a>
-			</button>
+			<a href="#about" class="btn-down">
+				<i class="fa-solid fa-chevron-down"></i>
+			</a>
 		</section>
 		<!-- SOBRE MÍ -->
 		<section id="about">
@@ -257,9 +257,9 @@
 		</ul>
 	</footer>
 	<!-- BOTÓN SUBIR -->
-	<button class="btn-up" id="btn-up">
-		<a href="#"><i class="fa-solid fa-chevron-up"></i></a>
-	</button>
+	<a href="#" class="btn-up" id="btn-up">
+		<i class="fa-solid fa-chevron-up"></i>
+	</a>
 
 	<!-- SCRIPT -->
 	<script src="js/main.js"></script>
