--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -158,9 +158,9 @@
 		</ul>
 	</footer>
 	<!-- BOTÓN SUBIR -->
-	<button class="btn-up" id="btn-up">
-		<a href="#"><i class="fa-solid fa-chevron-up"></i></a>
-	</button>
+	<a href="#" class="btn-up" id="btn-up">
+		<i class="fa-solid fa-chevron-up"></i>
+	</a>
 
 	<!-- SCRIPT -->
 	<script src="../js/main.js"></script>
