--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -67,11 +67,11 @@
 					</div>
 					<div class="gallery-item" data-index="9"><img src="../img/galeria/lettering/img-09.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="7"><img src="../img/galeria/lettering/img-10.jpg" alt="">
+					<div class="gallery-item" data-index="10"><img src="../img/galeria/lettering/img-10.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="8"><img src="../img/galeria/lettering/img-11.jpg" alt="">
+					<div class="gallery-item" data-index="11"><img src="../img/galeria/lettering/img-11.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="9"><img src="../img/galeria/lettering/img-12.jpg" alt="">
+					<div class="gallery-item" data-index="12"><img src="../img/galeria/lettering/img-12.jpg" alt="">
 					</div>
 				</div>
 			</article>
@@ -100,9 +100,9 @@
 		</ul>
 	</footer>
 	<!-- BOTÓN SUBIR -->
-	<button class="btn-up" id="btn-up">
-		<a href="#"><i class="fa-solid fa-chevron-up"></i></a>
-	</button>
+	<a href="#" class="btn-up" id="btn-up">
+		<i class="fa-solid fa-chevron-up"></i>
+	</a>
 
 	<!-- SCRIPT -->
 	<script src="../js/main.js"></script>
