--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Facundo Vacotti // Diseño gráfico // Diseño web</title>
+	<title>Facundo Vacotti // Diseñador gráfico / web</title>
 	<link rel="shortcut icon" href="./img/icon.svg" type="image/x-icon">
 	<link rel="stylesheet" href="./css/style.css">
 </head>
@@ -40,6 +40,9 @@
 	</header>
 	<!-- MAIN -->
 	<main>
+		<div id="loader">
+			<img src="/img/icon.svg" alt="Cargando">
+		  </div>		  
 		<!-- LANDING -->
 		<section id="home">
 			<div class="line"></div>
