--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+	<div id="loader">
+		<img src="img/icon.svg" alt="Cargando">
+	</div>
 	<!-- HEADER -->
 	<header>
 		<nav>
@@ -40,9 +43,6 @@
 	</header>
 	<!-- MAIN -->
 	<main>
-		<div id="loader">
-			<img src="/img/icon.svg" alt="Cargando">
-		  </div>		  
 		<!-- LANDING -->
 		<section id="home">
 			<div class="line"></div>
