--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+	<!-- LOADER -->
 	<div id="loader">
 		<img src="img/icon.svg" alt="Cargando">
 	</div>
@@ -39,6 +40,7 @@
 				<span class="bar"></span>
 				<span class="bar"></span>
 			</div>
+			<a href="../index.html"><img src="../img/icon.svg" alt=""></a>
 		</nav>
 	</header>
 	<!-- MAIN -->
