--- a/pages/branding.html
+++ b/pages/branding.html
@@ -25,6 +25,7 @@
 				<span class="bar"></span>
 				<span class="bar"></span>
 			</div>
+			<a href="../index.html"><img src="../img/icon.svg" alt=""></a>
 		</nav>
 	</header>
 	<!-- MAIN -->
