--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<span class="bar"></span>
 				<span class="bar"></span>
 			</div>
-			<a href="index.html"><img src="img/icon.svg" alt=""></a>
+			<a href="index.html"><img src="img/home.svg" alt=""></a>
 		</nav>
 	</header>
 	<!-- MAIN -->
