más aire costados

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-	<!-- LOADER -->
+	<!-- Pantalla de carga -->
 	<div id="loader">
 		<img src="img/icon.svg" alt="Cargando">
 	</div>
-	<!-- HEADER -->
+	<!-- Header -->
 	<header>
 		<nav>
 			<ul class="nav-menu">
@@ -43,9 +43,9 @@
 			<a href="index.html"><img src="img/home.svg" alt=""></a>
 		</nav>
 	</header>
-	<!-- MAIN -->
+	<!-- Main -->
 	<main>
-		<!-- LANDING -->
+		<!-- Landing -->
 		<section id="home">
 			<div class="line"></div>
 			<h1>f.<span class="bold">vacotti</span></h1>
@@ -54,18 +54,19 @@
 				<i class="fa-solid fa-chevron-down"></i>
 			</a>
 		</section>
-		<!-- SOBRE MÍ -->
+		<!-- Sobre mí -->
 		<section id="about">
 			<article class="about-data">
 				<h2>sobre mí.</h2>
-				<p><span class="bold">¡Hola!</span>. Te doy la bienvenida a mi cv/portfolio.
+				<p>
+					<span class="bold">¡Hola!</span>. Te doy la bienvenida a mi cv/portfolio.
 					<br><br>
 					Mi nombre es <span class="bold">Facundo Vacotti</span>. Tengo 23 años, resido en Lomas de Zamora
-					(Buenos Aires, Argentina) y actualmente estoy en proceso de convertirme en <span
-						class="bold">diseñador gráfico</span>.
+					(Buenos Aires, Argentina) y actualmente estoy en proceso de convertirme en <span class="bold">diseñador 
+					gráfico</span>.
 					<br><br>
 					Me encuentro cursando el cuarto año de la licenciatura en <span class="bold">Diseño y Comunicación
-						Visual</span> en la Universidad Nacional de Lanús (UNLa) y a la vez realizo diferentes cursos
+					Visual</span> en la Universidad Nacional de Lanús (UNLa) y a la vez realizo diferentes cursos
 					para continuar aprendiendo y especializándome en diversos rubros como por ejemplo el de programación
 					web.
 					<br><br>
@@ -74,21 +75,22 @@
 				</p>
 			</article>
 		</section>
-		<!-- DIVISIÓN -->
+		<!-- División -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
-		<!-- FORMACIÓN -->
+		<!-- Formación -->
 		<section id="formacion">
 			<article>
 				<h2>formación.</h2>
-				<!-- LÍNEA -->
+				<!-- Línea de tiempo -->
 				<div class="timeline">
 					<ul>
 						<li>
 							<div class="time-content">
 								<h4 class="date">2012-2017</h4>
-								<p>Bachiller en <span class="bold">ciencias sociales</span> en el Insituto San Francisco
+								<p>
+									Bachiller en <span class="bold">ciencias sociales</span> en el Insituto San Francisco
 									Javier.
 								</p>
 							</div>
@@ -96,7 +98,8 @@
 						<li>
 							<div class="time-content">
 								<h4 class="date">2018-2019</h4>
-								<p>Licenciatura en <span class="bold">Diseño Industrial</span> en la Universidad
+								<p>
+									Licenciatura en <span class="bold">Diseño Industrial</span> en la Universidad
 									Nacional de Lanús (UNLa).
 								</p>
 							</div>
@@ -104,7 +107,8 @@
 						<li>
 							<div class="time-content">
 								<h4 class="date">2019-(en curso)</h4>
-								<p>Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la
+								<p>
+									Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la
 									Universidad Nacional de Lanús (UNLa).
 								</p>
 							</div>
@@ -112,7 +116,8 @@
 						<li>
 							<div class="time-content">
 								<h4 class="date">dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER)
+								<p>
+									Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER)
 									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
 									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
 								</p>
@@ -121,9 +126,10 @@
 						<li>
 							<div class="time-content">
 								<h4 class="date">dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">Programación Web</span> / <span
-										class="bold">Front End Developer</span>, <span class="bold">Gestión de
-										Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
+								<p>
+									Curso bimestral de <span class="bold">Programación Web</span> / <span
+									class="bold">Front End Developer</span>, <span class="bold">Gestión de
+									Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
 									"BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad
 									Teconológica Nacional (UTN).
 								</p>
@@ -131,27 +137,32 @@
 						</li>
 					</ul>
 				</div>
-				<!-- LÍNEA P/ CELULAR -->
+				<!-- Línea de tiempo para móviles -->
 				<div class="timeline_mobile">
 					<ul>
 						<li>
 							<div>
 								<h4>2012-2017</h4>
-								<p>Bachiller en <span class="bold">ciencias sociales</span> en el Instituto San
-									Francisco Javier.</p>
+								<p>
+									Bachiller en <span class="bold">ciencias sociales</span> en el Instituto San
+									Francisco Javier.
+								</p>
 							</div>
 						</li>
 						<li>
 							<div>
 								<h4>2018-2019</h4>
-								<p>Licenciatura en <span class="bold">Diseño Industrial</span> en la Universidad
-									Nacional de Lanús (UNLa).</p>
+								<p>
+									Licenciatura en <span class="bold">Diseño Industrial</span> en la Universidad
+									Nacional de Lanús (UNLa).
+								</p>
 							</div>
 						</li>
 						<li>
 							<div>
 								<h4>2019-(en curso)</h4>
-								<p>Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la
+								<p>
+									Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la
 									Universidad Nacional de Lanús (UNLa).
 								</p>
 							</div>
@@ -159,7 +170,8 @@
 						<li>
 							<div>
 								<h4>dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER)
+								<p>
+									Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER)
 									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
 									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
 								</p>
@@ -168,9 +180,10 @@
 						<li>
 							<div>
 								<h4>dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">Programación Web</span> / <span
-										class="bold">Front End Developer</span>, <span class="bold">Gestión de
-										Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
+								<p>
+									Curso bimestral de <span class="bold">Programación Web</span> / <span
+									class="bold">Front End Developer</span>, <span class="bold">Gestión de
+									Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
 									"BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad
 									Teconológica Nacional (UTN).
 								</p>
@@ -180,11 +193,11 @@
 				</div>
 			</article>
 		</section>
-		<!-- DIVISIÓN -->
+		<!-- División -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
-		<!-- TRABAJOS -->
+		<!-- Trabajos -->
 		<section id="work">
 			<h2>trabajos.</h2>
 			<div class="work-container">
@@ -193,11 +206,11 @@
 				<a href="./pages/lettering.html">lettering.</a>
 			</div>
 		</section>
-		<!-- DIVISIÓN -->
+		<!-- División -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
-		<!-- CONTACTO -->
+		<!-- Contacto -->
 		<section id="contacto">
 			<h2>contáctame.</h2>
 			<div class="form-container">
@@ -224,49 +237,72 @@
 						<input class="send" type="submit" value="enviar">
 					</form>
 				</div>
-				<!-- VÍAS ALTERNATIVAS -->
+				<!-- Vías alternativas -->
 				<div class="contacto-other">
 					<h3>vías alternativas.</h3>
 					<ul>
-						<li><a href="tel:5411441000093" target="_blank" class="fa-brands fa-whatsapp"></a></li>
-						<li><a href="https://t.me/fvacotti" target="_blank" class="fa-brands fa-telegram"></a></li>
-						<li><a href="https://www.linkedin.com/in/facundo-vacotti-876a5919b" target="_blank"
-								class="fa-brands fa-linkedin-in"></a></li>
-						<li><a href="mailto:fvacotti@outlook.com" target="_blank"
-								class="fa-sharp fa-solid fa-envelope"></a></li>
+						<li>
+							<a href="tel:5411441000093" target="_blank" class="fa-brands fa-whatsapp"></a>
+						</li>
+						<li>
+							<a href="https://t.me/fvacotti" target="_blank" class="fa-brands fa-telegram"></a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/in/facundo-vacotti-876a5919b" target="_blank"
+								class="fa-brands fa-linkedin-in">
+							</a>
+						</li>
+						<li>
+							<a href="mailto:fvacotti@outlook.com" target="_blank" class="fa-sharp fa-solid fa-envelope">
+							</a>
+						</li>
 					</ul>
 				</div>
 			</div>
 		</section>
-		<!-- DIVISIÓN -->
+		<!-- División -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
 	</main>
-	<!-- FOOTER -->
+	<!-- Footer -->
 	<footer>
 		<ul class="footer-data">
-			<li class="footer_title">
+			<li class="footer-title">
 				Facundo Vacotti
 			</li>
-			<li>diseñador gráfico</li>
-			<li>front-end developer</li>
+			<li>
+				diseñador gráfico
+			</li>
+			<li>
+				front-end developer
+			</li>
 		</ul>
-		<!-- REDES SOCIALES -->
+		<!-- Redes sociales -->
 		<ul class="footer-redes">
-			<li><a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a></li>
-			<li><a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a></li>
-			<li><a href="https://www.instagram.com/fvacotti" target="_blank" class="fa-brands fa-instagram"></a></li>
-			<li><a href="https://twitter.com/fvacotti" target="_blank" class="fa-brands fa-twitter"></a></li>
-			<li><a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a></li>
+			<li>
+				<a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a>
+			</li>
+			<li>
+				<a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a>
+			</li>
+			<li>
+				<a href="https://www.instagram.com/fvacotti" target="_blank" class="fa-brands fa-instagram"></a>
+			</li>
+			<li>
+				<a href="https://twitter.com/fvacotti" target="_blank" class="fa-brands fa-twitter"></a>
+			</li>
+			<li>
+				<a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a>
+			</li>
 		</ul>
 	</footer>
-	<!-- BOTÓN SUBIR -->
+	<!-- Botón para subir -->
 	<a href="#" class="btn-up" id="btn-up">
 		<i class="fa-solid fa-chevron-up"></i>
 	</a>
 
-	<!-- SCRIPT -->
+	<!-- Script -->
 	<script src="js/main.js"></script>
 	<script src="https://kit.fontawesome.com/5727d2ffb3.js" crossorigin="anonymous"></script>
 </body>
