--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					Me encuentro cursando el cuarto año de la licenciatura en <span class="bold">Diseño y Comunicación
 					Visual</span> en la Universidad Nacional de Lanús (UNLa) y a la vez realizo diferentes cursos
 					para continuar aprendiendo y especializándome en diversos rubros como por ejemplo el de programación
-					web.
+					y el diseño web.
 					<br><br>
 					Dentro de la esfera del diseño gráfico me apasionan por sobre todo el mundo del branding, la
 					tipografía y el diseño editorial.
@@ -248,7 +248,7 @@
 							<a href="https://t.me/fvacotti" target="_blank" class="fa-brands fa-telegram"></a>
 						</li>
 						<li>
-							<a href="https://www.linkedin.com/in/facundo-vacotti-876a5919b" target="_blank"
+							<a href="https://www.linkedin.com/in/fvacotti" target="_blank"
 								class="fa-brands fa-linkedin-in">
 							</a>
 						</li>
