--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -143,7 +143,7 @@
 	<!-- FOOTER -->
 	<footer>
 		<ul class="footer-data">
-			<li class="footer_title">
+			<li class="footer-title">
 				Facundo Vacotti
 			</li>
 			<li>diseñador gráfico</li>
