--- a/pages/branding.html
+++ b/pages/branding.html
@@ -116,7 +116,7 @@
 	<!-- FOOTER -->
 	<footer>
 		<ul class="footer-data">
-			<li class="footer_title">
+			<li class="footer-title">
 				Facundo Vacotti
 			</li>
 			<li>diseñador gráfico</li>
