--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -85,7 +85,7 @@
 	<!-- FOOTER -->
 	<footer>
 		<ul class="footer-data">
-			<li class="footer_title">
+			<li class="footer-title">
 				Facundo Vacotti
 			</li>
 			<li>diseñador gráfico</li>
