--- a/pages/branding.html
+++ b/pages/branding.html
@@ -15,10 +15,21 @@
 	<header>
 		<nav>
 			<ul class="nav-menu">
-				<li><a href="../index.html">home</a></li>
-				<li><a href="../pages/branding.html" class="selected">branding</a></li>
-				<li><a href="../pages/editorial.html">editorial</a></li>
-				<li><a href="../pages/lettering.html">lettering</a></li>
+				<li>
+					<a href="../index.html">home</a>
+				</li>
+				<li>
+					<a href="../pages/branding.html" class="selected">branding</a>
+				</li>
+				<li>
+					<a href="../pages/editorial.html">editorial</a>
+				</li>
+				<li>
+					<a href="../pages/lettering.html">lettering</a>
+				</li>
+				<li>
+					<a href="https://drive.google.com/file/d/12oxWA_IviL8OwL-jJnhxWmDzQlkAc0LB/view?usp=share_link" target="_blank">mi cv</a>
+				</li>
 			</ul>
 			<div class="hamburger">
 				<span class="bar"></span>
