--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 				<li>
 					<a href="#contacto" class="nav-link">contacto</a>
 				</li>
+				<li>
+					<a href="https://drive.google.com/file/d/12oxWA_IviL8OwL-jJnhxWmDzQlkAc0LB/view?usp=share_link" target="_blank">mi cv</a>
+				</li>
 			</ul>
 			<div class="hamburger">
 				<span class="bar"></span>
