arreglos grid + icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<!-- Pantalla de carga -->
 	<div id="loader">
-		<img src="img/icon.svg" alt="Cargando">
+		<img src="img/icon-load.svg" alt="Cargando">
 	</div>
 	<!-- Header -->
 	<header>
@@ -43,7 +43,7 @@
 				<span class="bar"></span>
 				<span class="bar"></span>
 			</div>
-			<a href="index.html"><img src="img/home.svg" alt=""></a>
+			<a href="#"><img src="img/home.svg" alt=""></a>
 		</nav>
 	</header>
 	<!-- Main -->
