--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 					<a href="#contacto" class="nav-link">contacto</a>
 				</li>
 				<li>
-					<a href="https://drive.google.com/file/d/12oxWA_IviL8OwL-jJnhxWmDzQlkAc0LB/view?usp=share_link" target="_blank">mi cv</a>
+					<a href="https://drive.google.com/file/d/12oxWA_IviL8OwL-jJnhxWmDzQlkAc0LB/view?usp=share_link"
+						target="_blank">mi cv</a>
 				</li>
 			</ul>
 			<div class="hamburger">
@@ -51,8 +52,11 @@
 		<!-- Landing -->
 		<section id="home">
 			<div class="line"></div>
-			<h1>f.<span class="bold">vacotti</span></h1>
-			<p>// cv + portfolio</p>
+			<div class="title">
+				<h1>f.<span class="bold">vacotti</span></h1>
+				<br>
+				<p>// cv + portfolio</p>
+			</div>
 			<a href="#about" class="btn-down">
 				<i class="fa-solid fa-chevron-down"></i>
 			</a>
@@ -65,11 +69,12 @@
 					<span class="bold">¡Hola!</span>. Te doy la bienvenida a mi cv/portfolio.
 					<br><br>
 					Mi nombre es <span class="bold">Facundo Vacotti</span>. Tengo 23 años, resido en Lomas de Zamora
-					(Buenos Aires, Argentina) y actualmente estoy en proceso de convertirme en <span class="bold">diseñador 
-					gráfico</span>.
+					(Buenos Aires, Argentina) y actualmente estoy en proceso de convertirme en <span
+						class="bold">diseñador
+						gráfico</span>.
 					<br><br>
 					Me encuentro cursando el cuarto año de la licenciatura en <span class="bold">Diseño y Comunicación
-					Visual</span> en la Universidad Nacional de Lanús (UNLa) y a la vez realizo diferentes cursos
+						Visual</span> en la Universidad Nacional de Lanús (UNLa) y a la vez realizo diferentes cursos
 					para continuar aprendiendo y especializándome en diversos rubros como por ejemplo el de programación
 					y el diseño web.
 					<br><br>
@@ -93,7 +98,8 @@
 							<div class="time-content">
 								<h4 class="date">2012-2017</h4>
 								<p>
-									Bachiller en <span class="bold">ciencias sociales</span> en el Insituto San Francisco
+									Bachiller en <span class="bold">ciencias sociales</span> en el Insituto San
+									Francisco
 									Javier.
 								</p>
 							</div>
@@ -131,8 +137,8 @@
 								<h4 class="date">dic-2022</h4>
 								<p>
 									Curso bimestral de <span class="bold">Programación Web</span> / <span
-									class="bold">Front End Developer</span>, <span class="bold">Gestión de
-									Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
+										class="bold">Front End Developer</span>, <span class="bold">Gestión de
+										Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
 									"BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad
 									Teconológica Nacional (UTN).
 								</p>
@@ -185,8 +191,8 @@
 								<h4>dic-2022</h4>
 								<p>
 									Curso bimestral de <span class="bold">Programación Web</span> / <span
-									class="bold">Front End Developer</span>, <span class="bold">Gestión de
-									Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
+										class="bold">Front End Developer</span>, <span class="bold">Gestión de
+										Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
 									"BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad
 									Teconológica Nacional (UTN).
 								</p>
