--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -44,13 +44,9 @@
 		<!-- PRESENTACIÓN -->
 		<section id="present-design">
 			<div class="line"></div>
-			<h2>diseño editorial.</h2>
+			<h1>editorial.</h1>
 			<p>El <span class="bold">diseño editorial</span> es la rama del diseño gráfico que se encarga de la
 				maquetación y composición de todo tipo de publicaciones como libros, revistas, periódicos, etc.
-				<br><br>
-				El principal objetivo de éste es crear un diseño que resulte atractivo y funcional para el lector;
-				consiguiendo una armonía perfecta entre forma y contenido. Otorgando de este modo una calidad
-				estilística a la publicación y una buena imagen de la misma al cliente.
 			</p>
 		</section>
 		<!-- GALERÍA -->
