--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -44,13 +44,9 @@
 		<!-- PRESENTACIÓN -->
 		<section id="present-design">
 			<div class="line"></div>
-			<h2>lettering.</h2>
-			<p>El <span class="bold">lettering</span> es un término general que cubre el arte de "dibujar" letras en
+			<h1>lettering.</h1>
+			<p>El <span class="bold">lettering</span> es un término general dentro del diseño que cubre el arte de "dibujar" letras en
 				lugar de simplemente escribirlas.
-				<br><br>
-				Las letras se consideran una forma de arte donde cada letra de una frase o cita actúa como una
-				ilustración. Cada letra se crea con una gran atención a los detalles y tiene un papel único dentro de una
-				composición.
 			</p>
 		</section>
 		<!-- GALERÍA -->
