--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div class="title">
 				<h1>f.<span class="bold">vacotti</span></h1>
 				<br>
-				<p>// cv + portfolio</p>
+				<p>// diseñador gráfico</p>
 			</div>
 			<a href="#about" class="btn-down">
 				<i class="fa-solid fa-chevron-down"></i>
@@ -126,7 +126,7 @@
 							<div class="time-content">
 								<h4 class="date">dic-2022</h4>
 								<p>
-									Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER)
+									Curso de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER)
 									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
 									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
 								</p>
@@ -136,7 +136,7 @@
 							<div class="time-content">
 								<h4 class="date">dic-2022</h4>
 								<p>
-									Curso bimestral de <span class="bold">Programación Web</span> / <span
+									Curso de <span class="bold">Programación Web</span> / <span
 										class="bold">Front End Developer</span>, <span class="bold">Gestión de
 										Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
 									"BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad
@@ -180,7 +180,7 @@
 							<div>
 								<h4>dic-2022</h4>
 								<p>
-									Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER)
+									Curso de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER)
 									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
 									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
 								</p>
@@ -190,7 +190,7 @@
 							<div>
 								<h4>dic-2022</h4>
 								<p>
-									Curso bimestral de <span class="bold">Programación Web</span> / <span
+									Curso de <span class="bold">Programación Web</span> / <span
 										class="bold">Front End Developer</span>, <span class="bold">Gestión de
 										Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
 									"BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad
