--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -96,7 +96,7 @@
 				Facundo Vacotti
 			</li>
 			<li>diseñador gráfico</li>
-			<li>front-end developer</li>
+			<li>maquetador web</li>
 		</ul>
 		<!-- REDES SOCIALES -->
 		<ul class="footer-redes">
