--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Facundo Vacotti // Diseñador gráfico / web</title>
+	<title>Facundo Vacotti // Diseño gráfico</title>
 	<link rel="shortcut icon" href="./img/icon.svg" type="image/x-icon">
 	<link rel="stylesheet" href="./css/style.css">
 </head>
@@ -284,7 +284,7 @@
 				diseñador gráfico
 			</li>
 			<li>
-				front-end developer
+				maquetador web
 			</li>
 		</ul>
 		<!-- Redes sociales -->
