--- a/pages/branding.html
+++ b/pages/branding.html
@@ -127,7 +127,7 @@
 				Facundo Vacotti
 			</li>
 			<li>diseñador gráfico</li>
-			<li>front-end developer</li>
+			<li>maquetador web</li>
 		</ul>
 		<!-- REDES SOCIALES -->
 		<ul class="footer-redes">
